# iRONStoolbox

./: .gitignore  .travis.yml  Figures.pptx  People to share iRONS with.docx  README.md  Untitled.ipynb  apt.txt  aznbsetup.sh  environment.yml  iRONS_questionnaire_results2.xlsx  iRONs questionnaire.docx  paper.bib  paper.md  postBuild  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
0 - Tutorials/: 1 - Getting started.ipynb  Getting started.html  How to install libraries.ipynb
0 - Tutorials/.ipynb_checkpoints/: 1 - Getting started-checkpoint.ipynb  2 - How to install libraries-checkpoint.ipynb
1 - Jupyter Notebook introduction/: Black_curve.py  Simple example.ipynb
1 - Jupyter Notebook introduction/.ipynb_checkpoints/: Simple example-checkpoint.ipynb
2 - Hydrological modelling/: Calibration of a rainfall-runoff model.ipynb
2 - Hydrological modelling/.ipynb_checkpoints/: Calibration of a rainfall-runoff model-checkpoint.ipynb
2 - Hydrological modelling/Input data/: CEH_data.py  cal_data_72_03.txt  input_data_68_11.txt  input_data_69_07_clatworthy.txt
3 - Reservoir operation/: 1 - Operation of a water system.ipynb  2 - Reservoir operation under uncertainty.ipynb  Operation of a water system.ipynb  Reservoir operation under uncertainty.ipynb
Submodules/: Bias_correction.py  HBV_calibration.py  HBV_sim.py  Operation_rules.py  Pythonic_vs_Numba.py  Res_sys_sim.py
Toolbox/: Pythonic_vs_Numba.py  Res_sys_sim_diagram.pptx
irons-env/: pyvenv.cfg
ppt files/: Res_sys_sim_diagram.pptx  System layout.pptx
(+4938 files in other folders)
